# lexactivator-dart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  THIRD_PARTY_NOTICES.txt  download-libs.sh  pubspec.yaml
.github/workflows/: build.yml  update-version.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/lexactivator/: LexactivatorPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/lexactivator_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
example/windows/windows/runner/: Runner.rc
ios/: .gitignore  lexactivator.podspec
ios/Classes/: LexactivatorPlugin.h  LexactivatorPlugin.m  SwiftLexactivatorPlugin.swift
lib/: lexactivator.dart
lib/src/: activation_mode.dart  feature_entitlement.dart  lex_status_codes.dart  lexactivator_exception.dart  lexactivator_native.dart  license_meter_attribute.dart  organisation_address.dart  product_version_feature_flag.dart  release.dart  user_license.dart
linux/: CMakeLists.txt  lexactivator_plugin.cc
linux/include/lexactivator/: lexactivator_plugin.h
macos/: lexactivator.podspec
macos/Classes/: LexactivatorPlugin.swift
windows/: CMakeLists.txt  lexactivator_plugin.cpp
windows/include/lexactivator/: lexactivator_plugin.h
